# macro-lens

./: .env.example  .gitignore  README.md  app.py  backtest_cli.py  black_litterman.py  features.py  hmm_models.py  macro_lens.py  main.py  pyproject.toml  validator_cache.json  validator_prompt_FROZEN.py  validator_prompt_FROZEN.sha256  zscore_cache.json
tests/: test_chart.py  test_gradio_tab.py  test_metrics_timeline.py  test_step4.py  test_step5.py  test_step6.py  test_step7.py  test_step8.py
