[project]
name = "macro-lens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fredapi>=0.5.2",
    "gradio>=6.16.0",
    "hmmlearn>=0.3.3",
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "plotly>=6.8.0",
    "pydantic>=2.13.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = []
